Game is running at proper resolution and pixelated now

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,10 @@ html
                 #notice
                     h1 Paused
                     p click to resume
-        #g
+
+        .flex-container
+            .flex-row
+                #g
         
         script(src="./three.js")
         script(src="./main.js", async)
