--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,13 +8,27 @@ body, html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-canvas {
-    width: 100%;
-    height: 100%;
+.flex-container {
+    width:  100vw;
+    height: 100vh;
+    display: flex;           /* establish flex container */
+    flex-direction: column;  /* make main axis vertical */
+    justify-content: center; /* center items vertically, in this case */
+    align-items: center;     /* center items horizontally, in this case */
+}
 
-    margin: 0;
-    padding: 0;
-    background-color: #000;
+#g {
+    width:  90vmin;
+    height: 90vmin;
+
+    canvas {
+        width:  100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #000;
+        image-rendering: pixelated;
+    }
 }
 
 #blocker {
