Added water surface

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,4 +22,5 @@ html
             include assets/shader/water-surface-frag.glsl
         
         script(src="./three.js")
+        script(src="./Mirror.js")
         script(src="./main.js", async)
