--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         meta(charset="utf-8")
-        title #LOWREZJAM 2017
+        title #make sail
         link(rel="stylesheet", href="./main.css")
     body
         #blocker
