--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         meta(charset="utf-8")
+        meta(name="viewport", content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0")
         title make sail
         link(rel="stylesheet", href="./main.css")
     body
