Added stats.js to track FPS and UPS

--- a/src/index.pug
+++ b/src/index.pug
@@ -17,5 +17,8 @@ html
                 #g
             #d
         
+        #stats-container
+        
         script(src="./three.js")
+        script(src="./stats.min.js")
         script(src="./main.js", async)
