--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 body, html {
     background-color: rgb(39, 40, 34);
 
-    margin:  0;
+    margin: 0;
     padding: 0;
     overflow: hidden;
 
@@ -9,16 +9,16 @@ body, html {
 }
 
 .flex-container {
-    width:  100vw;
+    width: 100vw;
     height: 100vh;
-    display: flex;           /* establish flex container */
-    flex-direction: column;  /* make main axis vertical */
+    display: flex; /* establish flex container */
+    flex-direction: column; /* make main axis vertical */
     justify-content: center; /* center items vertically, in this case */
-    align-items: center;     /* center items horizontally, in this case */
+    align-items: center; /* center items horizontally, in this case */
 }
 
 #d {
-    width:  100vw;
+    width: 100vw;
     height: 100vh;
     position: absolute;
 
@@ -31,14 +31,14 @@ body, html {
 }
 
 #g {
-    width:  30vmin;
+    width: 30vmin;
     height: 30vmin;
     position: relative;
 }
 
 #g canvas {
     position: absolute;
-    width:  100%;
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
@@ -48,9 +48,9 @@ body, html {
 
 #blocker {
     position: absolute;
-    width:    100%;
-    height:   100%;
-    z-index:  10;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
 
     background-color: rgba(10, 10, 10, 0.75);
 }
@@ -59,9 +59,10 @@ body, html {
     width: 100%;
     height: 100%;
 
-    display:         flex;
-    align-items:     center;
+    display: flex;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
 
     color: #fff;
     text-align: center;
