--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,26 +17,27 @@ body, html {
     align-items: center; /* center items horizontally, in this case */
 }
 
-#d {
+#debug {
     width: 100vw;
     height: 100vh;
     position: absolute;
 
     z-index: 9;
-    font-family: 'Fira Code', Consolas, monospace;
+    font-family: 'Hack', 'Fira Code', Consolas, monospace;
     font-size: 1vmin;
     white-space: pre;
     color: white;
     mix-blend-mode: hard-light;
 }
 
-#g {
+/*
+#game {
     width: 30vmin;
     height: 30vmin;
     position: relative;
 }
 
-#g canvas {
+#game canvas {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -45,6 +46,7 @@ body, html {
     background-color: #000;
     image-rendering: pixelated;
 }
+*/
 
 #blocker {
     position: absolute;
